update FileWordCounter